fix spacing in menu

--- a/style.css
+++ b/style.css
@@ -1000,7 +1000,7 @@ body {
 }
 /* line 44, sass/custom/_page.scss */
 #site-navigation li {
-  margin-right: 10px;
+  margin-right: 30px;
   text-transform: uppercase;
 }
 
